tests/negative/typecheck/unreachable_select.orng
// unreachable_select.orng:6:17: error: the type `Void` is not selectable
//     unreachable.x
//                ^
// 
fn main() -> Int {
    unreachable.x
    4
}